scrollbar fixed in howto page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,7 +60,6 @@
 
 	div.boxupdates
 	{
-		width:191px !important;  width /**/:200px;
 		height:190px !important; height /**/: 200px;
 		padding: 4px;
 		border:1px solid #EEE; border-right:0 solid;
